# psychrometric-server

./: .vimrc  Cargo.toml  LICENSE  README.md  tree.txt
.cargo/: .config.toml.swp
docs/: main.tex
libs/uom-master/examples/: mks.rs
libs/uom-master/src/si/: mass_per_mass.rs  mod.rs
src/: .main.rs.swp  common.rs  main-eos.rs  main.correct_factor.rs  main.eos.2.rs  main.eos.3.rs  main.greek.rs  main.node.rs  main.physics.rs  main.psy.v2.rs  main.rs  main.split_array.rs  main.traits.rs  mains.tring.rs
src/common/: eos.rs  magnitude.rs  mod.rs  molar-volume.rs  pressure.rs  psychromet.rs  temperature.rs
src/common/chemistry/: compound.rs  critical_props.rs  ideal_heat_capacity.rs  mod.rs  saturation_props.rs  triple_point_props.rs
src/common/constants/: symbol.rs
src/common/errors/: psycrometry_error.rs
src/common/maths/: calculator.rs
src/common/physics/: component.rs  magnitude.rs  mixture.rs  mod.rs
src/common/physics/meteorology/: altitude.rs  calculator.rs  mod.rs
src/common/physics/psychrometry/: absolute_humidity.rs  calculator.rs  humidity_ratio.rs  mod.rs  (+3 more)
src/common/translation/: en.rs  es.rs
src/common/utils/: error.rs  mod.rs
src/ideal/domain/: ideal-gas.rs  ideal_eos.rs  ideal_gas.rs  mod.rs  psychrometry_calculator.rs  relative_humidity.rs
src/ideal/use_cases/: calculate_pressure.rs  calculate_volume.rs
src/virial/: mod.rs
src/virial/domain/: b_virial_coeff_calculator.rs  mod.rs  pressure_correction_factor.rs  psychrometry_calculator.rs  virial_eos.rs
src/virial/use_cases/: calculate_pressure.rs  calculate_volume.rs  mod.rs
(+13 files in other folders)
