[package]
name = "psychrometric"
version = "0.1.0"
edition = "2021"

# [dependencies.uom]
# path = "./libs/uom-master"

[dependencies]
peroxide = "0.37.7"
sea-orm = "1.0.0"
rocket = { version = "^0.5.1", features = ["json"] }
sea-orm-migration = "1.0.0"
serde_json = "1.0.81"

rust_decimal = { version = "1.35.0" }
rust_decimal_macros = { version = "1.35.0" }

# Physical units
uom = "0.36.0"

# katex = "0.4"
# latex = "0.3.1"
# rudg = "=0.1.1"
  